@@ -1,3 +1,4 @@
+Added pop-up window for server monitor text output
 # 00.00.24 (60567) Jan 24, 2012
 # 00.00.23 (60550) Jan 23, 2012
 Added group comparison tool which produces comparative bar charts for multiple conditions
